--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,8 +26,22 @@ jobs:
       - name: Deploy Project Artifacts
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
 
-  deploy-production:
+  acceptance-tests:
     needs: deploy-test
+    environment: preview
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Tests
+        run: |
+          npm install
+          npm run test:acceptance
+
+
+  deploy-production:
+    needs: acceptance-tests
     runs-on: ubuntu-latest
     environment: production
     steps:
