--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,11 +34,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Tests
-        run: |
-          npm install
-          npm run test:acceptance
+      - name: Install dependencies
+        run: npm ci
 
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npx playwright test
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
 
   deploy-production:
     needs: acceptance-tests
