--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test:unit": "jest app",
-    "test:acceptance": "jest acceptance",
+    "test:acceptance": "npx playwright test",
     "pre-commit": "next lint && npm run test:unit && next build"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
