--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,6 +1,7 @@
 name: Deployment
 
 env:
+  BASE_URL: ${{ env.BASE_URL }}
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
@@ -28,7 +29,7 @@ jobs:
 
   acceptance-tests:
     needs: deploy-test
-    environment: preview
+    environment: test
     runs-on: ubuntu-latest
 
     steps:
