--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:unit": "jest app",
     "test:acceptance": "npx playwright test",
     "test:acceptance:ui": "npx playwright test --ui",
-    "pre-commit": "next lint && npm run test:unit && next build"
+    "pre-commit": "next lint && npm run test:unit && npm run test:acceptance && next build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
