--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -27,7 +27,21 @@ jobs:
       - name: Deploy Project Artifacts
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
 
-  acceptance-tests:
+  acceptance-tests-api:
+    needs: deploy-test
+    environment: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Playwright tests
+        run: npm run test:acceptance:api
+
+  acceptance-tests-web:
     needs: deploy-test
     environment: test
     runs-on: ubuntu-latest
@@ -42,7 +56,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npm run test:acceptance:web
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
@@ -52,7 +66,7 @@ jobs:
           retention-days: 30
 
   deploy-production:
-    needs: acceptance-tests
+    needs: [acceptance-tests-web, acceptance-tests-api]
     runs-on: ubuntu-latest
     environment: production
     steps:
