fix: playwright dependencies needed for API test runner

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     environment: test
     steps:
-
       - uses: actions/checkout@v4
 
       - name: Install Vercel CLI
@@ -37,6 +36,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Run Playwright tests
         run: npm run test:acceptance:api
