--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:acceptance:api": "export DRIVER=api && npm run test:acceptance -- --project=chromium",
     "test:acceptance:web": "export DRIVER=web && npm run test:acceptance",
     "test:acceptance:ui": "npx playwright test --ui",
-    "pre-commit": "next lint && next build && npm run test:unit && npm run test:acceptance:api && npm run test:acceptance:web"
+    "pre-commit": "next lint && npm run test:unit && npm run test:acceptance:api && npm run test:acceptance:web && next build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
