refactor: moved supabase clients and local config

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "npm run test:unit && next build",
     "start": "next start",
-    "supabase:start": "supabase start",
-    "supabase:stop": "supabase stop",
+    "supabase:start": "supabase start  --workdir ./lib",
+    "supabase:stop": "supabase stop --workdir ./lib",
     "lint": "next lint --fix",
     "test:unit": "jest app",
     "test:acceptance": "npx playwright test",
