feat: set username

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start",
     "supabase:start": "supabase start  --workdir ./lib",
     "supabase:stop": "supabase stop --workdir ./lib",
+    "supabase:db:reset": "supabase db reset --workdir ./lib",
+    "supabase:db:diff": "supabase db diff --workdir ./lib",
     "lint": "next lint --fix",
     "test:unit": "jest app",
     "test:acceptance": "npx playwright test",
     "test:acceptance:api": "export DRIVER=api && npm run test:acceptance -- --project=chromium",
     "test:acceptance:web": "export DRIVER=web && npm run test:acceptance",
-    "test:acceptance:ui": "npx playwright test --ui",
+    "test:acceptance:ui": "export DRIVER=web && npm run test:acceptance -- --ui",
     "pre-commit": "next lint --fix && npm run test:unit && npm run test:acceptance:api && npm run test:acceptance:web",
     "test:flakiness-check": "npm run pre-commit && npm run pre-commit && npm run pre-commit"
   },
