test: improved reliability

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run test:unit && next build",
+    "build": "next build",
     "start": "next start",
+    "lint": "next lint --fix",
     "supabase:start": "supabase start  --workdir ./lib",
     "supabase:stop": "supabase stop --workdir ./lib",
     "supabase:db:reset": "supabase db reset --workdir ./lib",
     "supabase:db:diff": "supabase db diff --workdir ./lib",
-    "lint": "next lint --fix",
     "test:unit": "jest app",
     "test:acceptance": "npx playwright test",
     "test:acceptance:api": "export DRIVER=api && npm run test:acceptance -- --project=chromium",
