fix: trying to remove need to google secrets in pipeline

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Link Supabase Project
         run: supabase link --project-ref $SUPABASE_PROJECT_ID --workdir ./lib
 
+      - name: Replace config.toml with CI version
+        run: cp -f ./lib/supabase/config.ci.toml ./lib/supabase/config.toml
+
       - name: Migrate Supabase DB
         run: supabase db push --workdir ./lib
 
@@ -95,6 +98,9 @@ jobs:
 
       - name: Link Supabase Project
         run: supabase link --project-ref $SUPABASE_PROJECT_ID --workdir ./lib
+
+      - name: Replace config.toml with CI version
+        run: cp -f ./lib/supabase/config.ci.toml ./lib/supabase/config.toml
 
       - name: Migrate Supabase DB
         run: supabase db push --workdir ./lib
