--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
     "supabase:start": "supabase start  --workdir ./lib",
     "supabase:stop": "supabase stop --workdir ./lib",
     "supabase:db:reset": "supabase db reset --workdir ./lib",
@@ -16,7 +17,7 @@
     "test:acceptance:api": "export DRIVER=api && npm run test:acceptance -- --project=chromium",
     "test:acceptance:web": "export DRIVER=web && npm run test:acceptance",
     "test:acceptance:ui": "export DRIVER=web && npm run test:acceptance -- --ui",
-    "pre-commit": "next lint --fix && npm run test:unit && npm run test:acceptance:api && npm run test:acceptance:web",
+    "pre-commit": "next lint && npm run prettier && npm run test:unit && npm run test:acceptance:api && npm run test:acceptance:web",
     "test:flakiness-check": "npm run pre-commit && npm run pre-commit && npm run pre-commit"
   },
   "dependencies": {
@@ -47,8 +48,10 @@
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "postcss": "^8",
+    "prettier": "3.4.2",
     "supabase": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
