--- a/lib/supabase/config.ci.toml
+++ b/lib/supabase/config.ci.toml
@@ -2,7 +2,7 @@
 # https://supabase.com/docs/guides/local-development/cli/config
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "hello-infrastructure-template"
+project_id = "infrastructure-template"
 
 [api]
 enabled = true
