--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "^15.1.2",
+    "pino": "^9.6.0",
+    "pino-pretty": "^10.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
